--- a/opendaylight/md-sal/sal-dom-broker/pom.xml
+++ b/opendaylight/md-sal/sal-dom-broker/pom.xml
@@ -64,6 +64,7 @@
 
     <build>
         <plugins>
+            <!-- TODO - unite yang-maven-plugin configuration in md-sal-->
             <plugin>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-maven-plugin</artifactId>
