sal-restconf-broker initial implementation  needs https://git.opendaylight.org/gerrit/#/c/5259/ to be merged for  successful build
Change-Id: Ic665eaf25c908ed7633cfeee7629354d647ef09f
Signed-off-by: Martin Bobak <mbobak@cisco.com>

--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -52,6 +52,16 @@
           <artifactId>sal-broker-impl</artifactId>
           <version>${mdsal.version}</version>
         </dependency>
+          <dependency>
+              <groupId>org.opendaylight.controller</groupId>
+              <artifactId>sal-remote</artifactId>
+              <version>${mdsal.version}</version>
+          </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>sal-restconf-broker</artifactId>
+            <version>${mdsal.version}</version>
+        </dependency>
         <dependency>
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>sal-core-spi</artifactId>
@@ -175,6 +185,16 @@
           <artifactId>concepts</artifactId>
           <version>${yangtools.version}</version>
         </dependency>
+          <dependency>
+              <groupId>org.opendaylight.yangtools</groupId>
+              <artifactId>restconf-client-api</artifactId>
+              <version>${yangtools.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.opendaylight.yangtools</groupId>
+              <artifactId>restconf-client-impl</artifactId>
+              <version>${yangtools.version}</version>
+          </dependency>
 
         <!-- config-->
         <dependency>
