Add support for identity-ref config attributes to config/netconf subsystem
Change-Id: I79d5147f1d6bb1acd6b5a374bb76f48b6a3aaf55
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/config/yang-test/pom.xml
+++ b/opendaylight/config/yang-test/pom.xml
@@ -12,6 +12,7 @@
     </parent>
 
     <artifactId>yang-test</artifactId>
+    <packaging>bundle</packaging>
 
     <description>Artifact that contains only generated code from yang files. Suitable for testing.
     </description>
@@ -138,6 +139,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
