--- a/opendaylight/md-sal/sal-dom-broker/pom.xml
+++ b/opendaylight/md-sal/sal-dom-broker/pom.xml
@@ -125,6 +125,7 @@
                             org.opendaylight.controller.sal.dom.broker,
                             org.opendaylight.controller.sal.dom.broker.impl,
                             org.opendaylight.controller.sal.dom.broker.osgi,
+                            org.opendaylight.controller.sal.dom.broker.util,
                             org.opendaylight.controller.config.yang.md.sal.dom.impl,
                             org.opendaylight.controller.config.yang.md.sal.dom.statistics,
                             org.opendaylight.yangtools.yang.util
