Remove duplicate properties
Change-Id: If079f0051241989a4f71e0ac8fa42f3a80e27182
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/md-sal/model/pom.xml
+++ b/opendaylight/md-sal/model/pom.xml
@@ -81,13 +81,13 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>${yang.codegen.version}</version>
+                        <version>${yangtools.version}</version>
                         <type>jar</type>
                     </dependency>
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>yang-binding</artifactId>
-                        <version>${yang.codegen.version}</version>
+                        <version>${yangtools.version}</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
