--- a/opendaylight/md-sal/samples/toaster/pom.xml
+++ b/opendaylight/md-sal/samples/toaster/pom.xml
@@ -45,7 +45,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>${yang.codegen.version}</version>
+                        <version>${yangtools.version}</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
