Cleanup dependencyManagement section
Change-Id: I48ab30fc7f96ab0a30e1094f8f9ca5097be0975b
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -755,6 +755,12 @@
        <version>${yangtools.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.opendaylight.yangtools</groupId>
+        <artifactId>yang-model-util</artifactId>
+        <version>${yangtools.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>hosttracker</artifactId>
         <version>${hosttracker.api.version}</version>
