--- a/opendaylight/md-sal/samples/toaster-it/pom.xml
+++ b/opendaylight/md-sal/samples/toaster-it/pom.xml
@@ -2,8 +2,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>sal-samples</artifactId>
         <groupId>org.opendaylight.controller.samples</groupId>
+        <artifactId>sal-samples</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>sample-toaster-it</artifactId>
@@ -12,11 +12,6 @@
         <developerConnection>scm:git:ssh://git.opendaylight.org:29418/controller.git</developerConnection>
         <url>https://wiki.opendaylight.org/view/OpenDaylight_Controller:MD-SAL</url>
     </scm>
-
-    <properties>
-        <exam.version>3.0.0</exam.version>
-        <url.version>1.5.0</url.version>
-    </properties>
 
     <build>
         <plugins>
@@ -144,7 +139,7 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>config-manager</artifactId>
-            <version>0.2.3-SNAPSHOT</version>
+	    <version>${config.version}</version>
         </dependency>
         <dependency>
             <groupId>equinoxSDK381</groupId>
@@ -155,17 +150,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.2</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools.thirdparty</groupId>
