--- a/opendaylight/md-sal/sal-binding-it/pom.xml
+++ b/opendaylight/md-sal/sal-binding-it/pom.xml
@@ -19,8 +19,6 @@
         <!-- Sonar jacoco plugin to get integration test coverage info -->
         <sonar.jacoco.reportPath>../sal-binding-broker/target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.jacoco.itReportPath>../sal-binding-broker/target/jacoco-it.exec</sonar.jacoco.itReportPath>
-        <netconf.version>0.2.3-SNAPSHOT</netconf.version>
-        <config.version>0.2.3-SNAPSHOT</config.version>
         <moxy.controller.version>2.5.0</moxy.controller.version>
     </properties>
 
@@ -227,17 +225,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.2</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -253,7 +248,7 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>config-manager</artifactId>
-            <version>0.2.3-SNAPSHOT</version>
+	    <version>${config.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller.model</groupId>
