Small fix to finally fix dryrun.
Turns out that the lack of directory hiearchy matching
our pom hierarchy requires some redeclaration of
properties.

Change-Id: I5b608ba9599ac5d9d54d1898f4f45f68001ada5e
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/opendaylight/config/config-plugin-parent/pom.xml
+++ b/opendaylight/config/config-plugin-parent/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <jmxGeneratorPath>${project.build.directory}/generated-sources/config</jmxGeneratorPath>
+        <config.version>0.2.3-SNAPSHOT</config.version>
     </properties>
 
     <build>
