Extract dom-serializer-api|impl from binding-broker-impl
Change-Id: I1b2844bfac5062fd15c1f011c3104b3dddb33b51
Signed-off-by: Tony Tkacik <ttkacik@cisco.com>
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/config/config-manager/pom.xml
+++ b/opendaylight/config/config-manager/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>concepts</artifactId>
             <version>${yangtools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-impl</artifactId>
+            <version>${yangtools.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
