--- a/opendaylight/md-sal/pom.xml
+++ b/opendaylight/md-sal/pom.xml
@@ -53,11 +53,7 @@
         <module>sal-rest-connector</module>
         <module>sal-netconf-connector</module>
 
-        <module>remoterpc-routingtable/implementation</module>
-        <module>sal-remoterpc-connector/implementation</module>
-        <!-- Clustered Data Store -->
-        <module>clustered-data-store/implementation</module>
-
+        
         <module>inventory-manager</module>
         <module>statistics-manager</module>
         <module>topology-manager</module>
@@ -66,6 +62,13 @@
 
         <!-- Compability Packages -->
         <module>compatibility</module>
+
+	<!-- Clustering
+	<module>remoterpc-routingtable/implementation</module>
+        <module>sal-remoterpc-connector/implementation</module>
+        <module>clustered-data-store/implementation</module>
+	 -->
+        
     </modules>
 
 
@@ -77,7 +80,7 @@
             </activation>
             <modules>
                 <module>sal-binding-it</module>
-                <module>clustered-data-store/integrationtest</module>
+                <!--module>clustered-data-store/integrationtest</module -->
                 <!--module>zeromq-routingtable/integrationtest</module -->
                 <!--module>sal-remoterpc-connector/integrationtest</module -->
                 <!--module>test/sal-rest-connector-it</modulei -->
@@ -91,7 +94,7 @@
                 </property>
             </activation>
             <build>
-                <!-- Put the IDE's build output in a folder other than target, 
+                <!-- Put the IDE's build output in a folder other than target,
                     so that IDE builds don't interact with Maven builds -->
                 <directory>target-ide</directory>
             </build>
@@ -330,8 +333,8 @@
                     <artifactId>maven-bundle-plugin</artifactId>
                     <version>${bundle.plugin.version}</version>
                     <extensions>true</extensions>
-                    <!--executions> <execution> <id>bundle-manifest</id> 
-                        <phase>process-classes</phase> <goals> <goal>manifest</goal> </goals> </execution> 
+                    <!--executions> <execution> <id>bundle-manifest</id>
+                        <phase>process-classes</phase> <goals> <goal>manifest</goal> </goals> </execution>
                         </executions -->
                     <configuration>
                         <instructions>
@@ -374,7 +377,7 @@
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco.version}</version>
                 </plugin>
-                <!--This plugin's configuration is used to store Eclipse 
+                <!--This plugin's configuration is used to store Eclipse
                     m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
