Fix JMX plugin mismatch with yangtools
https://git.opendaylight.org/gerrit/#/c/4775/ introduced an incompatible
StaticLoggerBinder to the classpath, so make the same change here.

Change-Id: I6255c0ea46768af9fba1196842253ea78b745f8e
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/config/yang-jmx-generator-plugin/pom.xml
+++ b/opendaylight/config/yang-jmx-generator-plugin/pom.xml
@@ -71,9 +71,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.googlecode.slf4j-maven-plugin-log</groupId>
-            <artifactId>slf4j-maven-plugin-log</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.jcabi</groupId>
+            <artifactId>jcabi-maven-slf4j</artifactId>
+            <version>0.8</version>
         </dependency>
 
         <dependency>
