One more fix to pass release-prepareonly
Add sanitytest as a dependency of the distribution else release would
fail

Change-Id: I69fa09c7f00b873586def2ba1452def3db3cb10f
Signed-off-by: Giovanni Meo <gmeo@cisco.com>

--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -539,6 +539,12 @@
           </plugin>
         </plugins>
       </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>sanitytest</artifactId>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
